# BSC-Thesis

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
OpenCLKernels/: canny.cl  dog.cl  gauss_blur.cl  test.cl
docs/: comparison_of_edge_detection_methods.tex  thesis.bib
docs/chapters/: developer_docs.tex  introduction.tex  summary.tex  user_docs.tex
docs/plantUml/: model.puml  model_real.puml  view.puml  view_real.puml
docs/testDatas/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt
docs/testDatas/test1/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
docs/testDatas/test1linux/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
docs/testDatas/test2/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
docs/testDatas/test2linux/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
docs/testDatas/test3/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
docs/testDatas/test4/: canny_cpu.txt  canny_cuda.txt  canny_open_cl.txt  dog_cpu.txt  dog_cuda.txt  dog_open_cl.txt
include/Canny/: canny_detector.h  canny_edge_detector.h  canny_timings.h
include/Canny/OpenCl/: canny_edge_detector_open_cl.h
include/Canny/cpu/: canny_edge_detector_cpu.h
include/Canny/cuda/: canny_detector_cuda.h  canny_edge_detector_cuda.cuh  cuda_canny_edge_detection.cuh
include/Dog/: dog_detector.h  dog_edge_detector.h  dog_timings.h
include/Dog/OpenCl/: dog_edge_detector_open_cl.h
include/Dog/cpu/: dog_edge_detector_cpu.h
include/Dog/cuda/: cuda_dog_edge_detection.cuh  dog_detector_cuda.h  dog_edge_detector_cuda.cuh
include/general/: detector_base.h  edge_detector_base.h  imgui_display.h  main_window.h  timings_base.h
include/general/OpenCL/: file_handling.h  get_devices.h  kernel.h  memory.h  program.h
include/general/OpenGL_SDL/: element_buffer_object.h  generic_structs.h  shader_program.h  vertex_array_object.h  vertex_buffer_object.h
include/general/cpu/: gauss_blur_cpu.h  morphology_cpu.h
include/general/cuda/: gpu_info.h
linux/: BSC_Thesis.desktop  BSC_Thesis_Tests.desktop
src/: main.cpp
src/Canny/OpenCl/: canny_edge_detector_open_cl.cpp
src/Canny/cpu/: canny_edge_detector_cpu.cpp
src/Canny/cuda/: canny_detector_cuda.cpp  canny_edge_detector_cuda.cpp  canny_edge_detector_cuda.cu  cuda_canny_edge_detection.cu
src/Dog/OpenCl/: dog_edge_detector_open_cl.cpp
src/Dog/cpu/: dog_edge_detector_cpu.cpp
src/Dog/cuda/: cuda_dog_edge_detection.cu  dog_detector_cuda.cpp  dog_edge_detector_cuda.cpp  dog_edge_detector_cuda.cu
src/general/: detector_base.cpp  imgui_display.cpp  main_window.cpp
src/general/OpenCL/: file_handling.cpp  get_devices.cpp  kernel.cpp  memory.cpp  program.cpp
src/general/OpenGL_SDL/: SDL_GLDebugMessageCallback.cpp  basic_window.cpp  element_buffer_object.cpp  file_handling.cpp  shader_program.cpp  vertex_array_object.cpp
src/general/cpu/: gauss_blur_cpu.cpp  morphology_cpu.cpp
src/general/cuda/: gauss_blur.cu  gpu_info.cpp
test/: CMakeLists.txt
test/include/: spiral_indexer.h  surface_painters.h  tester_base.h  testing_imgui_display.h  testing_window.h
test/include/Canny/: canny_tester.h
test/include/Canny/Cpu/: canny_cpu_tester.h
test/include/Canny/Cuda/: canny_cuda_tester.h
test/include/Canny/OpenCl/: canny_open_cl_tester.h
test/include/Dog/: dog_tester.h
test/include/Dog/Cpu/: dog_cpu_tester.h
test/include/Dog/Cuda/: dog_cuda_tester.h
test/include/Dog/OpenCl/: dog_open_cl_tester.h
test/src/: main.cpp  spiral_indexer.cpp  surface_painters.cpp  tester_base.cpp  testing_imgui_display.cpp  testing_window.cpp
test/src/Canny/Cpu/: canny_cpu_tester.cpp
test/src/Canny/Cuda/: canny_cuda_tester.cpp
test/src/Canny/OpenCl/: canny_open_cl_tester.cpp
test/src/Dog/Cpu/: dog_cpu_tester.cpp
test/src/Dog/Cuda/: dog_cuda_tester.cpp
test/src/Dog/OpenCl/: dog_open_cl_tester.cpp
win/: BSC_Thesis.exe.manifest  version.rc.in
